--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="app.css" />
+
 <h1>This is the homepage!</h1>
 
 <img src="https://media.giphy.com/media/3o85xoi6nNqJQJ95Qc/giphy.gif" />
