--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,15 +1,17 @@
+<link rel="stylesheet" href="app.css" />
+
 <h1>The posts page</h1>
 
 <% for(i = 0; i < posts.length; i++) { %>
-    <li>
-        <%= posts[i].title %> - <strong><%= posts[i].author %></strong>
-    </li>
+  <li>
+    <%= posts[i].title %> - <strong><%= posts[i].author %></strong>
+  </li>
 <% } %>
 
 <br /><br />
 
 <% posts.forEach(function(post) { %>
-    <li>
-        <%= post.title %> - <strong><%= post.author %></strong>
-    </li>
+  <li>
+    <%= post.title %> - <strong><%= post.author %></strong>
+  </li>
 <% }) %>
