--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,9 @@
-<link rel="stylesheet" href="app.css" />
+<% include partials/header %>
 
 <h1>This is the homepage!</h1>
 
-<img src="https://media.giphy.com/media/3o85xoi6nNqJQJ95Qc/giphy.gif" />
+<div class='homeImage'>
+  <img src="https://media.giphy.com/media/3o85xoi6nNqJQJ95Qc/giphy.gif" />
+</div>
+
+<% include partials/footer %>
