--- a/views/love.ejs
+++ b/views/love.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="app.css" />
+<% include partials/header %>
 
 <h1>You fell in love with: <%= thingVar %></h1>
 
@@ -8,7 +8,8 @@
   <p>Bad choice! You should have said Rusty</p>
 <% } %>
 
-
 <p>
   PS. This is the love.ejs file
 </p>
+
+<% include partials/footer %>
