--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,17 +1,23 @@
-<link rel="stylesheet" href="app.css" />
+<% include partials/header %>
 
 <h1>The posts page</h1>
 
+<ul>
 <% for(i = 0; i < posts.length; i++) { %>
   <li>
     <%= posts[i].title %> - <strong><%= posts[i].author %></strong>
   </li>
 <% } %>
+</ul>
 
 <br /><br />
 
+<ul>
 <% posts.forEach(function(post) { %>
   <li>
     <%= post.title %> - <strong><%= post.author %></strong>
   </li>
 <% }) %>
+</ul>
+
+<% include partials/footer %>
